Added Ubuntu sample + Ubuntu painter